# faust

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  COPYING.txt  Dockerfile  Dockerfile-aarch64  Makefile  ONDEMAND.md  README  README.md  TRACE  WHATSNEW  WHATSNEW.md  adding-feature.md  appveyor.yml  bubble.dsp  checks.json  dag.dot  debug.dsp  demo.dsp  faust-tree.txt  faust.1  faust.man  faust.vhd  faust2analysis  faust2explain  gamme.dsp  make_faust_dsp.bat  od1.dsp  run_test_cpp.sh  t1.dsp  test.dsp  test.py  test2.dsp  testFaust2wwise.py  (+9 more)
architecture/daisy/: CMakeLists.txt  Makefile  README.md  TODO  ex_faust.cpp  ex_faust_patch.cpp  faust_daisy_mem.py  faust_sdram_converter.py
architecture/esp32/: CMakeLists.txt  MPU9250.cpp  MPU9250.h  README.md  component.mk  esp32.cpp  esp32.h  gramophone-multi.cpp  gramophone.cpp  volume.dsp
compiler/: .gitignore  CMakeLists.txt  Doxyfile  EXTENDING.md  Makefile  Makefile.unix  README  README.md  RELEASE-NOTE  box_signal_api.cpp  compiler.pro  dsp_factory.cpp  dsp_factory.hh  export.hh  garbageable.hh  global.cpp  global.hh  libcode.cpp  libfaust.h  libmain.cpp  lock_api.cpp  lock_api.hh  main.cpp
compiler/Dependencies/: DependenciesAudit.cpp  DependenciesAudit.hh  DependenciesGraph.cpp  DependenciesGraph.hh  DependenciesPrinting.cpp  DependenciesPrinting.hh  DependenciesScheduling.cpp  DependenciesScheduling.hh  DependenciesUtils.cpp  DependenciesUtils.hh
compiler/DirectedGraph/: DirectedGraph.hh  DirectedGraphAlgorythm.hh  Schedule.hh
compiler/FaustAlgebra/: FaustAlgebra.hh
compiler/boxes/: boxcomplexity.cpp  boxcomplexity.hh  boxes.cpp  boxes.hh  boxtype.cpp  ppbox.cpp  ppbox.hh
compiler/dglib/: arrow.hh  digraph.hh  digraphop.hh  schedule.hh  stdprinting.hh
compiler/docs/: parser_rewrite_plan.md  parser_testing_baseline.md
compiler/documentator/: doc.cpp  doc.hh  doc_Text.cpp  doc_Text.hh  doc_autodoc.cpp  doc_autodoc.hh  doc_compile.cpp  doc_compile.hh  doc_lang.cpp  doc_lang.hh  doc_metadatas.cpp  doc_metadatas.hh  doc_notice.cpp  doc_notice.hh  doc_sharing.cpp  lateq.cpp  lateq.hh  notice.cpp  notice.hh
compiler/draw/: Doxyfile  PSDev.cpp  PSDev.h  SVGDev.cpp  SVGDev.h  boxcomplexity.cpp  constrFonctions.cpp  constrFonctions.h  device.h  drawbloc.cpp  drawblock.hh  drawschema.cpp  drawschema.hh  occurrences.hh  reprBloc.cpp  reprBloc.h  reprGroup.cpp  reprGroup.h  reprLib.h  reprMerge.cpp  reprMerge.h  reprPara.cpp  reprPara.h  reprParam.cpp  reprParam.h  reprRecurs.cpp  reprRecurs.h  reprSerie.cpp  reprSerie.h  reprSplit.cpp  reprSplit.h  representation.cpp  representation.h  sigToGraph.cpp  sigToGraph.hh  treeBloc.cpp  treeBloc.h  treeGroup.cpp  treeGroup.h  treeLib.h  (+7 more)
compiler/errors/: errormsg.cpp  errormsg.hh  exception.hh  timing.cpp  timing.hh
compiler/evaluate/: environment.cpp  environment.hh  eval.cpp  eval.hh  loopDetector.cpp  loopDetector.hh
compiler/extended/: absprim.cpp  absprim.hh  acosprim.cpp  acosprim.hh  asinprim.cpp  asinprim.hh  atan2prim.cpp  atan2prim.hh  atanprim.cpp  atanprim.hh  ceilprim.cpp  ceilprim.hh  clocksyncprim.hh  cosprim.cpp  cosprim.hh  downsampleprim.hh  downsamplingprim.hh  exp10prim.hh  expprim.cpp  expprim.hh  floorprim.cpp  floorprim.hh  fmodprim.cpp  fmodprim.hh  ftzprim.cpp  ftzprim.hh  internalprim.hh  log10prim.cpp  log10prim.hh  logprim.cpp  logprim.hh  maxprim.cpp  maxprim.hh  minprim.cpp  minprim.hh  powprim.cpp  powprim.hh  remainderprim.cpp  remainderprim.hh  rintprim.cpp  (+11 more)
compiler/generator/: Text.cpp  Text.hh  asmjs_code_container.cpp  asmjs_code_container.hh  asmjs_dsp_aux.cpp  asmjs_dsp_aux.hh  asmjs_instructions.hh  c_code_container.cpp  c_code_container.hh  c_instructions.hh  code_compile.cpp  code_compile.hh  code_container.cpp  code_container.hh  code_gen.hh  code_loop.hh  codegeneration.cpp  compile.cpp  compile.hh  compile_graph.cpp  compile_graph.hh  compile_scal.cpp  compile_scal.hh  compile_scal_fir.cpp  compile_scal_iir.cpp  compile_sched.cpp  compile_sched.hh  compile_vect.cpp  compile_vect.hh  compile_vector_graph.cpp  compile_vector_graph.hh  contextor.cpp  contextor.hh  cpp_code_container.cpp  cpp_code_container.hh  cpp_gpu_code_container.cpp  cpp_gpu_code_container.hh  cpp_instructions.hh  dag.cpp  dag.hh  (+96 more)
compiler/interval/: QUESTIONS.md  bitwiseOperations.cpp  bitwiseOperations.hh  check.cpp  check.hh  faust_algebra.hh  intervalAbs.cpp  intervalAcos.cpp  intervalAcosh.cpp  intervalAdd.cpp  intervalAnd.cpp  intervalAsin.cpp  intervalAsinh.cpp  intervalAtan.cpp  intervalAtan2.cpp  intervalAtanh.cpp  intervalButton.cpp  intervalCeil.cpp  intervalCheckbox.cpp  intervalCos.cpp  intervalCosh.cpp  intervalDelay.cpp  intervalDiv.cpp  intervalEq.cpp  intervalExp.cpp  intervalFloat.cpp  intervalFloatCast.cpp  intervalFloatNum.cpp  intervalFloor.cpp  intervalGe.cpp  intervalGt.cpp  intervalHSlider.cpp  intervalInt.cpp  intervalIntCast.cpp  intervalIntNum.cpp  intervalInv.cpp  intervalLabel.cpp  intervalLe.cpp  intervalLog.cpp  intervalLog10.cpp  (+32 more)
compiler/normalize/: README.md  aterm.cpp  aterm.hh  constant_folding.cpp  constant_folding.hh  mterm.cpp  mterm.hh  normalform.cpp  normalform.hh  normalize.cpp  normalize.hh  privatise.cpp  privatise.hh  simplify.cpp  simplify.hh  simplifying_terms.cpp  simplifying_terms.hh
compiler/parallelize/: code_loop.cpp  code_loop.hh  colorize.cpp  colorize.h  delayline.cpp  delayline.hh  graphSorting.cpp  graphSorting.hh  loop.cpp  loop.hh
compiler/parser/: Downloader.cpp  Downloader.hh  Makefile  PackageManager.cpp  PackageManager.hh  PkgUrl.cpp  PkgUrl.hh  enrobage.cpp  enrobage.hh  faustlexer.cpp  faustlexer.cxx  faustlexer.l  faustparser.cpp  faustparser.hpp  faustparser.hpp.h  faustparser.y  fileresolver.hh  initfaustparser.sh  initfaustparser2.sh  initfaustparser3.sh  sourcefetcher.cpp  sourcefetcher.hh  sourcereader.cpp  sourcereader.hh  unistd.h
compiler/patternmatcher/: patternmatcher.cpp  patternmatcher.hh
compiler/propagate/: labels.cpp  labels.hh  propagate.cpp  propagate.hh
compiler/signals/: binop.cpp  binop.hh  interval.cpp  (+37 more)
(+7576 files in other folders)
